--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-polyfill": "^6.3.14",
+    "babelify": "~5.0.3",
+    "browserify": "^9.0.3",
     "gulp": "~3.8.11",
     "karma": "~0.12.31",
-    "browserify": "^9.0.3",
-    "babelify": "~5.0.3",
     "karma-browserify": "~3.0.2",
     "karma-jasmine": "~0.3.5",
     "karma-phantomjs-launcher": "~0.1.4"
